// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrossFade should allow for temporary CSS Transition behavior 1`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
</div>
`;

exports[`CrossFade should allow for temporary CSS Transition behavior 2`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-cross-fade rmd-cross-fade--active"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CrossFade should allow for temporary CSS Transition behavior 3`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CrossFade should correctly merge the className prop 1`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="custom-class"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CrossFade should correctly merge the className prop 2`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="custom-class rmd-cross-fade rmd-cross-fade--active"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CrossFade should correctly merge the className prop 3`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="custom-class"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CrossFade should correctly merge the className prop 4`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="custom-class"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CrossFade should correctly merge the className prop 5`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="custom-class"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CrossFade should default to using appear transitions 1`] = `
<div>
  <div
    class="rmd-cross-fade rmd-cross-fade--active"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CrossFade should default to using appear transitions 2`] = `
<div>
  <div
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CrossFade should default to using appear transitions 3`] = `
<div>
  <div
    class="rmd-cross-fade rmd-cross-fade--active"
    data-testid="element"
  >
    This is some new content.
  </div>
</div>
`;

exports[`CrossFade should default to using appear transitions 4`] = `
<div>
  <div
    data-testid="element"
  >
    This is some new content.
  </div>
</div>
`;

exports[`CrossFade should transition correctly when not appearing 1`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CrossFade should transition correctly when not appearing 2`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-cross-fade rmd-cross-fade--active"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CrossFade should transition correctly when not appearing 3`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CrossFade should transition correctly when not appearing 4`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CrossFade should transition correctly when not appearing 5`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;
